# melodica-notes

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: pipeline.yaml
docs/: index.md
docs/api/: chords.md  harmonic.md  harmonics.md
melodica_notes/: chord.py  chords.py  cli.py  harmonic.py  harmonics.py  scale.py  scales.py
tests/: test_chord.py  test_chords.py  test_cli.py  test_melodica_notes.py  test_scale.py  test_scales.py
