[tool.poetry]
name = "melodica-notes"
version = "0.1.0"
description = "Melodica Notes is a CLI tool designed to assist melodica players with musical scales, chords, and harmonic series."
authors = ["Victor Senna <vhsenna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
