[tool.poetry]
name = "melodica-notes"
version = "0.1.1"
description = "Melodica Notes is a CLI tool to assist melodica players with musical scales, chords, and harmonics."
license = "GNU GPLv3"
authors = ["Victor Senna <vhsenna@gmail.com>"]
readme = "README.md"
packages = [{include = "melodica_notes"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Documentation" = "https://melodica-notes.readthedocs.io"
"Source" = "https://github.com/vhsenna/melodica-notes"
"Issue Tracker" = "https://github.com/vhsenna/melodica-notes/issues"
"Donate" = "https://www.paypal.com/donate/?hosted_button_id=U37WUXE2TSW6Y"

[tool.poetry.scripts]
melodica-notes = "melodica_notes.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
jinja2 = "^3.1.4"
mkdocs-material = "^9.5.26"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
docs = "mkdocs serve"
test = "pytest -s -x --cov=melodica_notes -vv"
post_test = "coverage html"
